# RobotArmPackages

./: .gitignore  LICENSE  README.md  Test  calibration.yaml  cv_setup.sh
apriltag_ros/apriltag_ros/config/: tags.yaml
rbx1_computer_vision/: CMakeLists.txt  package.xml
rbx1_computer_vision/launch/: camera_init.launch
rbx1_computer_vision/scripts/: grid.py  image_processor.py
rbx1_control/: CMakeLists.txt  package.xml
rbx1_control/config/: gripper.yaml  joints.yaml  states.yaml
rbx1_control/launch/: simulator.launch
rbx1_description/: CMakeLists.txt  package.xml
rbx1_description/launch/: display.launch  gazebo.launch
rbx1_description/meshes/: link_5_wrist.STL  link_6_hand.STL
rbx1_description/meshes/collision/: base_link.STL  gripper_idol_gear.STL  gripper_servo_gear.STL  link_1_shoulder.STL  link_2_arm.STL  link_3_upper_forearm.STL  link_4_forearm.STL  link_5_wrist.STL  link_6_hand.STL  pivot_arm_gripper_idol.STL  pivot_arm_gripper_servo.STL  tip_gripper_idol.STL  tip_gripper_servo.STL
rbx1_description/rviz/: urdf.rviz
rbx1_description/urdf/: rbx1.urdf
rbx1_hardware_interface/: CMakeLists.txt  package.xml
rbx1_hardware_interface/arduino/: rbx1_arduino.ino
rbx1_hardware_interface/msg/: ArmJointState.msg
rbx1_hardware_interface/src/: angles_to_steps.cpp
rbx1_motion_planning/: CMakeLists.txt  README.md  package.xml
rbx1_motion_planning/action/: executePoseGoal.action  executePositionGoal.action
rbx1_motion_planning/scripts/: rbx1MotionPlanningServer.py
rbx1_motion_planning/scripts/Old Scripts /: client_move_arm.py
rbx1_motion_planning/scripts/Testing Scripts/: jointGoalClient.py  poseGoalClient.py  positionGoalClient.py
rbx1_motion_planning/scripts/old_scripts/: client_move_arm.py  rbx1MoveItCommander.py
rbx1_motion_planning/scripts/testing_scripts/: poseGoalClient.py
rbx1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rbx1_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  rbx1_description.srdf
rbx1_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
rbx1_scripts/: CMakeLists.txt  README.md  package.xml
rbx1_scripts/launch/: camera_init.launch  rbx1_init.launch
rbx1_scripts/scripts/: image_processor.py  rbx1MoveItCommander.py  video_processor.py
rbx1_scripts/scripts/Smach/: board_to_coord.py  rbx1_GetPose.py  rbx1_MoveArm.py  rbx1_fsm.py  rbx1_movearmjoint.py  rbx1_movearmposition.py  rbx1_positionserver.py
rbx1_scripts/scripts/computer_vision/: rbx1MoveItCommander.py
rbx1_scripts/srv/: PoseService.srv
rbx1_state_machine/: CMakeLists.txt  package.xml
rbx1_state_machine/action/: executePoseGoal.action
rbx1_state_machine/scripts/: MoveArm.py  fsm.py
rbx1_state_machine/scripts/Smach/: rbx1_GetPose.py  rbx1_fsm.py  rbx1_movearmjoint.py  rbx1_movearmpose.py  rbx1_movearmposition.py  rbx1_positionserver.py
rbx1_state_machine/srv/: PoseService.srv
state_machine/: CMakeLists.txt  package.xml
state_machine/scripts/: GetPose.py  fsm.py  rbx1_GetPose.py
