<?xml version="1.0"?>
<package format="2">
  <name>rbx1_control</name>
    <version>0.0.1</version>
  <description>
    <p>RBX1 controller</p>
    <p>RBX1 controller. Simulation and real</p>
  </description>
  <maintainer email="ovatn@equinor.com">Olav Vatne</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/rbx1_urdf</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent />
  </export>
</package>
