<?xml version="1.0"?>
<package format="2">
  <name>rbx1_description</name>
  <version>0.0.1</version>
  <description>
    <p>URDF Description package for rbx1_ros - OxRAM variant</p>
    <p>This package contains 3D models and launch files
    to simulate and visualise the rbx1 arm</p>
  </description>
  <maintainer email="jacques.cloete@trinity.ox.ac.uk">Jacques Cloete</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
      <architecture_independent />
  </export>
</package>
